--- a/codeBase/index.html
+++ b/codeBase/index.html
@@ -12,17 +12,18 @@
 <body>
   <header>
     <img src="my_image_crop.jpeg" alt="Vidhi Jindal">
+    <h1><b><i>Vidhi Jindal</i></b></h1>
     <div class="contact-info">
-      <p><a href="vidhijin11@gmail.com" target="_blank">vidhijin11@gmail.com</a> | <a href="+91-7683034585" target="_blank">+91-7683034585</a></p><br/>
+      <p><a href="vidhijin11@gmail.com" target="_blank">vidhijin11@gmail.com </a> | <a href="+91-7683034585" target="_blank">+91-7683034585</a></p><br/>
       <p><a href="https://www.linkedin.com/in/vidhi-jindal14/" target="_blank">LinkedIn</a> | 
-         <a href="https://github.com/vidhi-github" target="_blank">GitHub</a> | Greater Noida, India</p>
+         <a href="https://github.com/vidhi-github" target="_blank">GitHub</a> | &nbsp;<i class="fas fa-map-marker-alt"></i> Greater Noida, India</p>
     </div>
   </header>
 
   <main>
     <section>
-      <h1>Software Developer Engineer in Testing at Tiket.com</h1>
-      <p>4th-year Computer Science Engineering student</p>
+      <marquee><h1>Software Developer Engineer Intern in Test at Tiket.com Company.</h1></marquee>
+      <marquee><p>4th-year Computer Science Engineering student.</p></marquee>
       <hr>
 
       <h2><u>Education</u></h2>
@@ -37,7 +38,7 @@
       <h2><u>Skills</u></h2>
       <table>
         <tr><th>Category</th><th>Skills</th></tr>
-        <tr><td>Languages</td><td>Java, C, Python, JavaScript, CSS, HTML</td></tr>
+        <tr><td>Programming Languages</td><td>Java, C, Python, JavaScript, CSS, HTML</td></tr>
         <tr><td>Frameworks</td><td>React.js, Node.js, Express.js, Django, Flask, Bootstrap, Tailwind CSS, Material UI</td></tr>
         <tr><td>Database</td><td>MongoDB, MySQL</td></tr>
         <tr><td>Tools</td><td>Git, GitHub, Docker, YOLOv9, NVIDIA DGX A100, gamma.ai, yoodli.ai, playground.ai</td></tr>
@@ -46,14 +47,13 @@
       <hr>
 
       <h2><u>Experience</u></h2><br/>
-      <p><strong>Tiket.com</strong> - Software Developer Engineer Intern in Testing (June 2025–Present)</p><br/>
+      <p><strong>**Tiket.com**</strong> - Software Developer Engineer Intern in Test (SDET) (June 2025–Present)</p><br/>
       <!-- <p><b>Tech Stack: </b>Django Framework, JavaScript, REST API's</p> -->
-      <p><strong>Bluestock Fintech</strong> - Software Developer Engineer Intern(Oct 2024–Nov 2024)</p><br/>
-      <p><b>Tech Stack: </b>Django Framework, JavaScript, REST API's</p><br/>
-      <p><a href="https://drive.google.com/file/d/1oTV0hW65HxDi88tB8ORM8AK8OoMWK8WP/view" target="_blank"><b>Link</b> <i class="fas fa-external-link-alt"></i></a></p><br/>
-      <p>**Built components with Bootstrap, JavaScript, integrated with Django backend for dynamic functionality</p><br/>
-      <p>**Utilized Python, GitHub, and REST API’s for efficient version control, debugging, and enabling seamless
-            data exchange respectively, while maintaining scalable, high-quality codebases.</p>
+      <p><strong>**Bluestock Fintech**</strong> - Software Developer Engineer Intern (Oct 2024–Nov 2024)</p>
+      <p><i><u>Tech Stack:</u></i>   Django Framework, JavaScript, REST API's</p>
+      <p><a href="https://drive.google.com/file/d/1oTV0hW65HxDi88tB8ORM8AK8OoMWK8WP/view" target="_blank"><b>Link</b> <i class="fas fa-external-link-alt"></i></a></p>
+      <p><i><u>Description:</u></i>  Built components with Bootstrap, JavaScript, integrated with Django backend for dynamic functionality. Utilized Python, GitHub, and REST API’s for 
+                efficient version control, debugging, and enabling seamless data exchange respectively, while maintaining scalable, high-quality codebases.</p>
       <hr>
 
       <h2><u>Projects</u></h2>
@@ -62,26 +62,26 @@
           <th>Title</th><th>Tech Stack</th><th>Description</th><th>Deployed</th><th>GitHub</th>
         </tr>
         <tr>
-          <td>AuraVision - Multiperson Real-Time Face Recognition System</td>
+          <td><b>AuraVision - Multiperson Real-Time Face Recognition System</b></td>
           <td>NVIDIA DGX A100, GmailAPI, Containerization, TensorFlow, OpenCV, Flask, Python, MTCNN, DLIB, Docker</td>
           <td>The Multiperson Real-Time Face Recognition System is a deep learning-based application designed for real-time face detection and 
             recognition of multiple individuals in a frame. It uses advanced face detection techniques like MTCNN for face localization and DLIB for face recognition. 
             The system efficiently handles multiframes and batched frames, leveraging GPU acceleration for fast and accurate results. This solution is ideal for applications such as automated attendance 
             systems and surveillance systems, ensuring secure and reliable recognition even in real-time scenarios.</td>
-          <td>-</td>
+          <td>--</td>
           <td><a href="https://github.com/vidhi-github/multiperson_face_detection.git" target="_blank">Link</a></td>
         </tr>
         <tr>
-          <td>Speed Monitoring System</td>
+          <td><b>Intelligent Speed Monitoring and Alert System for Traffic Management<b></td>
           <td>YOLOv9, NVIDIA DGX A100, GmailAPI, Containerization, PyTorch, OpenCV, Flask, Python</td>
           <td><p>The Intelligent Speed Monitoring and Alert System for Traffic Management is designed to monitor vehicle speeds, detect violations, and 
             automatically recognize vehicle number plates in real-time. The system aims to capture frames when speed violations occur, and 
             email the concerned authority with the captured frame and vehicle number. </p></td>
-          <td>-</td>
+          <td>--</td>
           <td><a href="https://github.com/vidhi-github/Intelligent-Speed-Monitoring-and-Alert-System-for-Traffic-Management.git" target="_blank">Link</a></td>
         </tr>
         <tr>
-          <td>WanderLust</td>
+          <td><b>WanderLust</b></td>
           <td>MongoDB, Node.js, Express.js, REST API’s, JSON Web Tokens, Middleware, Cookies, MVC Framework, Render</td>
           <td><p>Wanderlust is a comprehensive web application designed to enable users to explore and review travel destinations while ensuring 
             robust data security and access control through authentication, authorization, and role-based access control (RBAC). 
@@ -90,7 +90,7 @@
           <td><a href="https://github.com/vidhi-github/wanderlust-project.git" target="_blank">Link</a></td>
         </tr>
         <tr>
-          <td>MeetRooms- Apna Video Call</td>
+          <td><b>MeetRooms- Apna Video Call</b></td>
           <td>MongoDB, React.js, Node.js, Express.js, JSON Web Tokens, Bcrypt, REST API's, Socket.IO, Socket.IO.CLIENT, Material-UI, Render</td>
           <td><p>MeetRooms is an advanced web application designed for seamless real-time video conferencing, live chat functionality, and session tracking. 
             Built with the MERN stack (MongoDB, Express.js, React.js, Node.js), it leverages WebRTC for peer-to-peer communication, providing high-quality interactive video calls. 
@@ -100,7 +100,7 @@
           <td><a href="https://github.com/vidhi-github/meetRooms.git" target="_blank">Link</a></td>
         </tr>
         <tr>
-          <td>Aqua Heroes</td>
+          <td><b>Aqua Heroes</b></td>
           <td>React, CSS</td>
           <td><p>Underground Water management educational game for SIH- Designed a React-based basic educational mobile/web application prototype for presenting the idea at 
             Smart India Hackathon(2024), focusing on underground water management. It helps to educates players on managing various water sources through engaging and interactive levels.</p></td>
@@ -108,21 +108,21 @@
           <td><a href="https://github.com/vidhi-github/ground-water-conserve.git" target="_blank">Link</a></td>
         </tr>
         <tr>
-          <td>Weather App</td>
+          <td><b>Weather App</b></td>
           <td>React, REST API's</td>
           <td><p>Weather App built using React and REST API's deployed on vercel.</p></td>
           <td><a href="https://weather-app-sandy-zeta-79.vercel.app/" target="_blank">Link</a></td>
           <td><a href="https://github.com/vidhi-github/weather-app.git" target="_blank">Link</a></td>
         </tr>
         <tr>
-          <td>TODO APPLICATION</td>
+          <td><b>TODO Application</b></td>
           <td>React, CSS</td>
           <td><p>To learn basic Todo App implementation using React.</p></td>
           <td><a href="https://todoapp-two-nu.vercel.app/" target="_blank">Link</a></td>
           <td><a href="https://github.com/vidhi-github/todoapp.git" target="_blank">Link</a></td>
         </tr>
         <tr>
-          <td>Lottery Game</td>
+          <td><b>Lottery Game</b></td>
           <td>React, CSS</td>
           <td><p>Lottery-game built using React.</p></td>
           <td><a href="https://lotterygame-one.vercel.app/" target="_blank">Link</a></td>
@@ -138,10 +138,10 @@
         <li>Full Stack Web Development Course (Apna College) <a href="https://mycourse.app/himYiYfjnbZCdSRt8" target="_blank" class="certificate-link">Link <i class="fas fa-external-link-alt"></i></a></li>
         <li>Smart India Hackathon 2024 <a href="https://drive.google.com/file/d/1q533IljwAB_Z0exugJ2CahRcZiloduJS/view?usp=drivesdk" target="_blank">Link <i class="fas fa-external-link-alt"></i></a></li>
         <li>GUVI SAWiT.AI Learnathon <a href="https://drive.google.com/file/d/1q59vEYEVjvMKE4bHy-7B61Sj2XegqcCC/view?usp=drivesdk" target="_blank">Link <i class="fas fa-external-link-alt"></i></a></li>
-        <li>Postman API Fundamentals Student Expert <a href="https://drive.google.com/file/d/1qQMkiwg7ViGpaQgEIsD-2HMbrQjsle4d/view?usp=drivesdk"></i></a></li>
-        <li>PaloAlto Cyber Security Virtual Internship <a href="https://drive.google.com/file/d/16ESorfOtIOJMxw3wZFYI2_lJa724bGRd/view?usp=drivesdk"></i></a></li>
+        <li>Postman API Fundamentals Student Expert <a href="https://drive.google.com/file/d/1qQMkiwg7ViGpaQgEIsD-2HMbrQjsle4d/view?usp=drivesdk" target="_blank">Link <i class="fas fa-external-link-alt"></i></a></li>
+        <li>PaloAlto Cyber Security Virtual Internship <a href="https://drive.google.com/file/d/16ESorfOtIOJMxw3wZFYI2_lJa724bGRd/view?usp=drivesdk" target="_blank">Link <i class="fas fa-external-link-alt"></i></a></li>
         <li>Data Structures and Algorithms in Java Course (Apna College) <a href="https://drive.google.com/file/d/193shGybuKcztLeCEiMnihD8U_MYMvTqq/view?usp=drivesdk" target="_blank">Link <i class="fas fa-external-link-alt"></i></a></li>
-        <li>Ready Tensor- Global Computer Vision Expo 2024  <a href="https://drive.google.com/file/d/1wCZ_nzURVuOg1QBkEiOagdk_9hcCC2gA/view?usp=drivesdk"></i></a></li>
+        <li>Ready Tensor- Global Computer Vision Expo 2024  <a href="https://drive.google.com/file/d/1wCZ_nzURVuOg1QBkEiOagdk_9hcCC2gA/view?usp=drivesdk" target="_blank">Link <i class="fas fa-external-link-alt"></i></a></li>
         <li>GeekVerse Hackathon by GGSIPU <a href="https://drive.google.com/file/d/1w5rvfZLy8YhRkeCIDsEzwnR6lRpwAT2v/view?usp=drivesdk" target="_blank">Link <i class="fas fa-external-link-alt"></i></a></li>
         <li>All India Naukri Campus Aptitude Test-2025 <a href="https://drive.google.com/file/d/1w906BPKBkUoV8iaRo-Ec5XBZ9z8A23Ox/view?usp=drivesdk" target="_blank">Link <i class="fas fa-external-link-alt"></i></a></li>
       </ul>
@@ -149,15 +149,15 @@
 
       <h2><u>Achievements</u></h2>
       <ul>
-        <li><b>550+</b> problems solved on LeetCode.</li>
-        <li></b>300+</b> problems solved on GeeksforGeeks.</li>
-        <li>Hacktoberfest 2024 badge achiever.</li>
-        <li>Secured <b>2nd position</b> in<b>Yukti- Project Presentation Program</li></b> against <b>50+</b>teams organised by our college GLBITM.</li>
+        <li><b>550+</b> problems solved on <b>LeetCode</b>.</li>
+        <li><b>300+</b> problems solved on <b>GeeksforGeeks</b>.</li>
+        <li><b>Hacktoberfest 2024</b> badge achiever.</li>
+        <li>Secured <b>2nd position</b> in <b>Yukti- Project Presentation Program</b> against <b>50+</b> teams organised by our college GLBITM.</li>
         <li>Secured in top <b>100 teams</b> in <b>Geek-verse hackathon</b> againsts <b>600+</b> teams organised by <b>GGSIPU</b>.</li>
-        <li>Secured in top <b>500</b> in CodeClash 2025 – The Battle of Algorithms<b>C</b> againsts <b>10,000+</b> aspirants organised by <b>Lets Code Community</b>.</li>
-        <li>Secured in top <b>850</b>contributors in GirlScript Summer of Code(GSSOC-Extd.)-2024<b>C</b> againsts <b>5,000+</b> aspirants organised by <b>GSSOC Community</b>.</li>
+        <li>Secured in top <b>500</b> in CodeClash 2025 – The Battle of Algorithms</b> againsts <b>10,000+</b> aspirants organised by <b>Lets Code Community</b>.</li>
+        <li>Secured in top <b>850</b> contributors in GirlScript Summer of Code(GSSOC-Extd.) - 2024</b> againsts <b>5,000+</b> aspirants organised by <b>GSSOC Community</b>.</li>
         <li>Secured in top <b>29256 rank</b> in <b>All India NCAT-2025</b> againsts <b>10,00,000+</b> aspirants organised by <b>Naukri Campus</b>.</li>
-        <li>Active participant in LeetCode, GFG, CodeChef contests.</li>
+        <li>Active participant at LeetCode, GFG, CodeChef contests.</li>
       </ul>
       <hr>
 
@@ -167,7 +167,7 @@
         <li>Served as Technical Head of Navrang Cultural Club at GLBITM.</li>
         <li>Served as Management Team Member of Shrinik Club at GLBITM.</li>
         <li>Volunteered at IEEE Conference hosted at GLBITM.</li>
-        <li>Secured <b>1st position</b>in intra and inter-college debate competitions.</li>
+        <li>Secured <b>1st position</b> in intra and inter-college debate competitions.</li>
         <li>Mentor and Leader of Dance group- Navrang Club of GLBITM.</li>
         <li>Book lover</li>
       </ul>
