--- a/codeBase/index.html
+++ b/codeBase/index.html
@@ -38,9 +38,9 @@
       <h2><u>Skills</u></h2>
       <table>
         <tr><th>Category</th><th>Skills</th></tr>
-        <tr><td>Programming Languages</td><td>Java, C, Python, JavaScript, CSS, HTML</td></tr>
+        <tr><td>Programming Languages</td><td>Java, C, Python, JavaScript, CSS, HTML, OOPS</td></tr>
         <tr><td>Frameworks</td><td>React.js, Node.js, Express.js, Django, Flask, Bootstrap, Tailwind CSS, Material UI</td></tr>
-        <tr><td>Database</td><td>MongoDB, MySQL</td></tr>
+        <tr><td>Databases</td><td>MongoDB, MySQL</td></tr>
         <tr><td>Tools</td><td>Git, GitHub, Docker, YOLOv9, NVIDIA DGX A100, gamma.ai, yoodli.ai, playground.ai</td></tr>
         <tr><td>Soft Skills</td><td>Leadership, Effective Communication, Active Listening, Event Coordination, Adaptability</td></tr>
       </table>
