Added Amazon ML Summer School 2025

--- a/codeBase/index.html
+++ b/codeBase/index.html
@@ -23,6 +23,7 @@
   <main>
     <section>
       <marquee><h1>Software Developer Engineer Intern in Test at Tiket.com Company.</h1></marquee>
+      <marquee><h1>Student at Amazon ML Summer School 2025.</h1></marquee>
       <marquee><p>4th-year Computer Science Engineering student.</p></marquee>
       <hr>
 
@@ -149,6 +150,7 @@
 
       <h2><u>Achievements</u></h2>
       <ul>
+        <li>Student at <b>Amazon ML Summer School 2025 (August 2025).</b></li>
         <li><b>550+</b> problems solved on <b>LeetCode</b>.</li>
         <li><b>300+</b> problems solved on <b>GeeksforGeeks</b>.</li>
         <li><b>Hacktoberfest 2024</b> badge achiever.</li>
