--- a/codeBase/index.html
+++ b/codeBase/index.html
@@ -22,7 +22,7 @@
 
   <main>
     <section>
-      <marquee><h1>Software Developer Engineer Intern in Test at Tiket.com Company.</h1></marquee>
+      <marquee><h1>Software Developer Engineer Intern in Test at Tiket.com</h1></marquee>
       <marquee><h1>Student at Amazon ML Summer School 2025.</h1></marquee>
       <marquee><p>4th-year Computer Science Engineering student.</p></marquee>
       <hr>
