--- a/codeBase/index.html
+++ b/codeBase/index.html
@@ -22,7 +22,7 @@
 
   <main>
     <section>
-      <marquee><h1>Software Developer Engineer Intern in Test at Tiket.com</h1></marquee>
+      <marquee><h1>SDET Intern at Tiket.com</h1></marquee>
       <marquee><h1>Student at Amazon ML Summer School 2025.</h1></marquee>
       <marquee><p>4th-year Computer Science Engineering student.</p></marquee>
       <hr>
@@ -30,7 +30,7 @@
       <h2><u>Education</u></h2>
       <table>
         <tr><th>Institution</th><th>Board</th><th>Degree</th><th>Year</th><th>GPA/Percentage</th></tr>
-        <tr><td>GL Bajaj Institute of Technology and Management(GLBITM)</td><td>AKTU</td><td>B.Tech-CSE</td><td>2022-2026</td><td>8.35 GPA</td></tr>
+        <tr><td>GL Bajaj Institute of Technology and Management (GLBITM)</td><td>AKTU</td><td>B.Tech-CSE</td><td>2022-2026</td><td>8.57 GPA</td></tr>
         <tr><td>St. Joseph's Sr. Sec. School</td><td>ISC</td><td>12th </td><td>2022</td><td>95.25%</td></tr>
         <tr><td>St. Joseph's Sr. Sec. School</td><td>ICSE</td><td>10th </td><td>2020</td><td>95%</td></tr>
       </table>
@@ -40,21 +40,32 @@
       <table>
         <tr><th>Category</th><th>Skills</th></tr>
         <tr><td>Programming Languages</td><td>Java, C, Python, JavaScript, CSS, HTML, OOPS</td></tr>
-        <tr><td>Frameworks</td><td>React.js, Node.js, Express.js, Django, Flask, Bootstrap, Tailwind CSS, Material UI</td></tr>
+        <tr><td>Frameworks</td><td>React.js, Node.js, Express.js, Django, Flask, Bootstrap, REST API's, Tailwind CSS, Material UI</td></tr>
         <tr><td>Databases</td><td>MongoDB, MySQL</td></tr>
-        <tr><td>Tools</td><td>Git, GitHub, Docker, YOLOv9, NVIDIA DGX A100, gamma.ai, yoodli.ai, playground.ai</td></tr>
+        <tr><td>Tools</td><td>Git, GitHub, Docker, YOLOv9, NVIDIA DGX A100, Jenkins, TestNG, gamma.ai, yoodli.ai, playground.ai</td></tr>
         <tr><td>Soft Skills</td><td>Leadership, Effective Communication, Active Listening, Event Coordination, Adaptability</td></tr>
       </table>
       <hr>
 
       <h2><u>Experience</u></h2><br/>
-      <p><strong>**Tiket.com**</strong> - Software Developer Engineer Intern in Test (SDET) (June 2025–Present)</p><br/>
-      <!-- <p><b>Tech Stack: </b>Django Framework, JavaScript, REST API's</p> -->
-      <p><strong>**Bluestock Fintech**</strong> - Software Developer Engineer Intern (Oct 2024–Nov 2024)</p>
-      <p><i><u>Tech Stack:</u></i>   Django Framework, JavaScript, REST API's</p>
+      <p><strong>Tiket.com</strong> - Software Developer Engineer Intern in Test (SDET) (June 2025–Present)</p>
+      <ul>
+        <li><i><u>Tech Stack:</u></i>   JAVA, REST API's, GitHub, Regression Testing, Automation Testing, Jenkins, TestNG, JIRA</li>
+        <li>Design and execute automated test scripts using Selenium and TestNG for regression testing. Collaborate with QA and development teams via Jira and Confluence to track bugs, document test cases,
+            and ensure CI/CD integration through Jenkins.</li>
+      </ul>
+      <hr/>
+      <p><strong>Bluestock Fintech</strong> - Software Developer Engineer Intern (Oct 2024–Nov 2024)</p>
+      <ul>
+        <li><i><u>Tech Stack:</u></i>   Django Framework, JavaScript, REST API's, GitHub</li>
+        <li>Built components with Bootstrap, JavaScript, integrated with Django backend for dynamic functionality. Utilized Python, GitHub, and REST API’s for 
+                efficient version control, debugging, and enabling seamless data exchange respectively, while maintaining scalable, high-quality codebases.</li>
+        <li><a href="https://drive.google.com/file/d/1oTV0hW65HxDi88tB8ORM8AK8OoMWK8WP/view" target="_blank"><b>Certificate of Internship</b> <i class="fas fa-external-link-alt"></i></a></li>
+      </ul>
+      <!-- <p><i><u>Tech Stack:</u></i>   Django Framework, JavaScript, REST API's</p>
       <p><a href="https://drive.google.com/file/d/1oTV0hW65HxDi88tB8ORM8AK8OoMWK8WP/view" target="_blank"><b>Link</b> <i class="fas fa-external-link-alt"></i></a></p>
       <p><i><u>Description:</u></i>  Built components with Bootstrap, JavaScript, integrated with Django backend for dynamic functionality. Utilized Python, GitHub, and REST API’s for 
-                efficient version control, debugging, and enabling seamless data exchange respectively, while maintaining scalable, high-quality codebases.</p>
+                efficient version control, debugging, and enabling seamless data exchange respectively, while maintaining scalable, high-quality codebases.</p> -->
       <hr>
 
       <h2><u>Projects</u></h2>
