--- a/codeBase/index.html
+++ b/codeBase/index.html
@@ -146,6 +146,7 @@
 
       <h2><u>Certificates</u></h2>
       <ul>
+        <li>CISCO CCNA Networking Course Certifications <a href="https://drive.google.com/drive/folders/1AOuCuAnONynl8SCb_W7_7iISrX9HQqnb" target="_blank">Link <i class="fas fa-external-link-alt"></i></a></li>
         <li>Contributor- GirlScript Summer of Code(GSSOC) extd-2024 and Social Summer of Code(Season 3)<a href="https://drive.google.com/file/d/1qThL5qH4n4oHo96K5UX2fIk7WiRXMTaW/view?usp=drivesdk" target="_blank" class="certificate-link">Link <i class="fas fa-external-link-alt"></i></a></li>
         <li>Full Stack Web Development Course (Apna College) <a href="https://mycourse.app/himYiYfjnbZCdSRt8" target="_blank" class="certificate-link">Link <i class="fas fa-external-link-alt"></i></a></li>
         <li>Smart India Hackathon 2024 <a href="https://drive.google.com/file/d/1q533IljwAB_Z0exugJ2CahRcZiloduJS/view?usp=drivesdk" target="_blank">Link <i class="fas fa-external-link-alt"></i></a></li>
